Fin dockerisation
